Removed the nested data models in open api yaml and updated the backend code.
